[package]
name        = "compact-time"
version     = "0.1.0"
edition     = "2021"
license     = "BlueOak-1.0.0"
description = "64-bit nanosecond time representation with a range from 1970-01-01 00:00:00 to 2514-05-30 01:53:03"
repository  = "https://github.com/twittner/compact-time"
keywords    = ["time"]
categories  = ["date-and-time"]

[package.metadata.docs.rs]
features = ["coarse", "utc"]

[features]
coarse     = ["rustix"]
utc        = ["tz-rs"]
executable = ["coarse", "utc", "clap"]

[dependencies]
cfg-if   = "1.0.0"
minicbor = { version = "0.20.0", features = ["derive"] }
serde    = { version = "1.0.185", features = ["derive"] }
# optional:
clap   = { version = "4.4.14", features = ["derive"], optional = true }
rustix = { version = "0.38.28", features = ["time"], optional = true }
tz-rs  = { version = "0.6.14", optional = true }

[dev-dependencies]
compact-time = { path = ".", features = ["coarse", "utc"] }

[[bin]]
name = "showtime"
required-features = ["executable"]
