[package]
name        = "compact-time"
version     = "0.7.0"
edition     = "2021"
license     = "BlueOak-1.0.0"
description = "64-bit nanosecond time representation with a range from 1970-01-01 00:00:00 to 2554-07-21 23:34:33.709551615"
repository  = "https://github.com/twittner/compact-time"
keywords    = ["time"]
categories  = ["date-and-time"]

[package.metadata.docs.rs]
features = ["full"]

[features]
coarse     = ["rustix"]
utc        = ["tz-rs"]
executable = ["coarse", "utc", "clap"]
full       = ["coarse", "utc", "minicbor", "serde"]

[dependencies]
minicbor = { version = "0.25.0", features = ["derive"], optional = true }
serde    = { version = "1.0.185", features = ["derive"], optional = true }
clap     = { version = "4.5.17", features = ["derive"], optional = true }
rustix   = { version = "0.38.28", features = ["time"], optional = true }
tz-rs    = { version = "0.6.14", optional = true }

[dev-dependencies]
compact-time = { path = ".", features = ["coarse", "utc"] }
quickcheck   = "1"

[[bin]]
name = "showtime"
required-features = ["executable"]
